--- a/index.html
+++ b/index.html
@@ -4,108 +4,128 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="logo link"
+          >Web<span class="color-logo-second">Studio</span></a
+        >
+        <ul class="list">
+          <li><a href="./index.html" class="nav-link link">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+          </li>
+          <li><a href="" class="nav-link link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link-address link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+110001111111" class="link-address link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <!-- Hero -->
-      <section class="">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section-bg-color">
+        <h1 class="hero-title-style">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
-
-      <!-- Features -->
-      <section class="">
-        <h2>Features</h2>
-        <ul>
+      <!-- section 2 -->
+      <section>
+        <h2 hidden class="hidden-title">Advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages-title">Strategy</h3>
+            <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages-title">Punctuality</h3>
+            <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages-title">Diligence</h3>
+            <p class="advantages-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages-title">Technologies</h3>
+            <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
-      <!-- What are we doing -->
-      <section class="">
-        <h2>What are we doing</h2>
-        <ul>
-          <li><img src="./images/img1.jpg" alt="computer" width="360" /></li>
-          <li><img src="./images/img2.jpg" alt="messenger" width="360" /></li>
-          <li><img src="./images/img3.jpg" alt="iphone" width="360" /></li>
+      <section>
+        <h2 class="title-section">What are we doing</h2>
+        <ul class="list">
+          <li>
+            <img src="./images/img1.jpg" alt="computer" width="360" />
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="phone" width="360" />
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="phone and computer" width="360" />
+          </li>
         </ul>
       </section>
-
-      <!-- Our Team -->
-      <section class="">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- section 3 -->
+      <section class="section-our-team">
+        <h2 class="title-section">Our Team</h2>
+        <ul class="list">
+          <li class="photo-item">
             <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title_name">Mark Guerrero</h3>
+            <p class="desc-proffecion">Product Designer</p>
           </li>
-          <li>
+          <li class="photo-item">
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title_name">Tom Ford</h3>
+            <p class="desc-proffecion">Frontend Developer</p>
           </li>
-          <li>
+          <li class="photo-item">
             <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title_name">Camila Garcia</h3>
+            <p class="desc-proffecion">Marketing</p>
           </li>
-          <li>
-            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+          <li class="photo-item">
+            <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" />
+            <h3 class="title_name">Daniel Wilson</h3>
+            <p class="desc-proffecion">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-
-    <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer-bg-color">
+      <a href="./index.html" class="logo link"
+        >Web<span class="color-logo-footer">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
